--- a/init.engineer-iOS-App/Info.plist
+++ b/init.engineer-iOS-App/Info.plist
@@ -18,12 +18,14 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
-	<key>GAD AdsBanner1</key>
-	<string>$(ADMOB_AD1)</string>
-	<key>GAD AdsBanner2</key>
-	<string>$(ADMOB_AD2)</string>
-	<key>GAD AdsBanner3</key>
-	<string>$(ADMOB_AD3)</string>
+	<key>GAD Banner</key>
+	<string>$(ADMOB_BANNER)</string>
+	<key>GAD Login</key>
+	<string>$(ADMOB_LOGIN)</string>
+	<key>GAD Cell</key>
+	<string>$(ADMOB_CELL1)</string>
+	<key>GAD Cell2</key>
+	<string>$(ADMOB_CELL2)</string>
 	<key>GAD AdsInterstitial</key>
 	<string>$(ADMOB_INTER)</string>
 	<key>GAD AdsInterstitial Video</key>
