--- a/init.engineer-iOS-App/Info.plist
+++ b/init.engineer-iOS-App/Info.plist
@@ -18,6 +18,13 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+    <key>SKAdNetworkItems</key>
+        <array>
+            <dict>
+                <key>SKAdNetworkIdentifier</key>
+                <string>cstr6suwn9.skadnetwork</string>
+            </dict>
+        </array>
 	<key>GAD Banner</key>
 	<string>$(ADMOB_BANNER)</string>
 	<key>GAD Login</key>
