--- a/BuildConfigure/Release.xcconfig.example
+++ b/BuildConfigure/Release.xcconfig.example
@@ -19,3 +19,13 @@ OAUTH2_CLIENT_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 OAUTH2_SCHEME=YOUR_CUSTOM_SCHEME
 OAUTH2_HOST=engineer.kaobei
 OAUTH2_PATH=YOUR_CUSTOM_CALLBACK_PATH
+
+// Google AdMob
+ADMOB_ID=ca-app-pub-0000000000000000~0000000000
+ADMOB_BANNER=ca-app-pub-0000000000000000/0000000000
+ADMOB_LOGIN=ca-app-pub-0000000000000000/0000000000
+ADMOB_CELL1=ca-app-pub-0000000000000000/0000000000
+ADMOB_CELL2=ca-app-pub-0000000000000000/0000000000
+ADMOB_INTER=ca-app-pub-0000000000000000/0000000000
+ADMOB_INTERV=ca-app-pub-0000000000000000/0000000000
+ADMOB_REWARD=ca-app-pub-0000000000000000/0000000000
