--- a/BuildConfigure/Release.xcconfig.example
+++ b/BuildConfigure/Release.xcconfig.example
@@ -29,3 +29,7 @@ ADMOB_CELL2=ca-app-pub-0000000000000000/0000000000
 ADMOB_INTER=ca-app-pub-0000000000000000/0000000000
 ADMOB_INTERV=ca-app-pub-0000000000000000/0000000000
 ADMOB_REWARD=ca-app-pub-0000000000000000/0000000000
+
+// Please fill it for kaobei api request purpose
+KAOBEI_TOKEN=
+KAOBEI_ID=
